bk_ida/gccida/c3/force_operand
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:5904:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:5905:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:5908:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:5908:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:5911:4: error: expected ';' after expression
rtx v15; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:5911:5: error: use of undeclared identifier 'v15'
rtx v15; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:5916:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:5919:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:5923:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:5944:21: error: use of undeclared identifier 'machine_mode'
v3 = gen_reg_rtx( ( machine_mode)BYTE2( v4)); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:5967:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v2->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:5977:1: error: use of undeclared identifier 'v15'
v15 = ( rtx)value[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:5978:19: error: use of undeclared identifier 'v15'
v16 = *( _DWORD *)v15; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:5979:41: error: use of undeclared identifier 'v15'
switch ( ( unsigned __int16)*( _DWORD *)v15 ) 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:5993:6: error: use of undeclared identifier 'v15'
if ( v15 == v3 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:6005:21: error: use of undeclared identifier 'machine_mode'
v15 = negate_rtx( ( machine_mode)BYTE2( v4), *( rtx *)&value[1]); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:6005:54: error: expected expression
v15 = negate_rtx( ( machine_mode)BYTE2( v4), *( rtx *)&value[1]); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:6005:1: error: use of undeclared identifier 'v15'
v15 = negate_rtx( ( machine_mode)BYTE2( v4), *( rtx *)&value[1]); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/expr.c:6011:15: error: use of undeclared identifier 'v15'
&& *( _WORD *)v15 == 54 
              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/force_operand/src/obj/expr.o] Error 1
